common/security/request-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: require-auth0-jwt
spec:
  selector:
    matchLabels:
      require-auth0: enabled
  jwtRules:
    - issuer: $(dataware-tools-common-security-jwt-issuer)
      jwksUri: $(dataware-tools-common-security-jwt-jwks-uri)
      audiences:
        - $(dataware-tools-common-security-jwt-audience)
      forwardOriginalToken: true
      outputPayloadToHeader: jwt-payload
