common/security/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-read-all
spec:
  action: ALLOW
  selector:
    matchLabels:
      require-auth0: enabled
  rules:
    - to:
        - operation:
            methods: [ "GET" ]
      when:
        - key: request.auth.audiences
          values:
            - $(dataware-tools-common-security-jwt-audience)
#        - key: request.auth.claims[permissions]
#          values:
#            - "read:all"
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-write-all
spec:
  action: ALLOW
  selector:
    matchLabels:
      require-auth0: enabled
  rules:
    - to:
        - operation:
            methods: [ "POST", "PUT", "PATCH", "DELETE" ]
      when:
        - key: request.auth.audiences
          values:
            - $(dataware-tools-common-security-jwt-audience)
#        - key: request.auth.claims[permissions]
#          values:
#            - "write:all"
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-all-without-require-auth0
spec:
  action: ALLOW
  selector:
    matchLabels:
      require-auth0: disabled
  rules:
    - to:
        - operation:
            paths: [ "*" ]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-auth0-user-admin
spec:
  action: DENY
  selector:
    matchLabels:
      require-auth0-user-admin: enabled
  rules:
    - to:
        - operation:
            methods: [ "POST", "PUT", "PATCH", "DELETE" ]
      when:
        - key: request.auth.claims[permissions]
          notValues:
            - "admin:user"
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-auth0-job-admin
spec:
  action: DENY
  selector:
    matchLabels:
      require-auth0-job-admin: enabled
  rules:
    - to:
        - operation:
            methods: [ "POST", "PUT", "PATCH", "DELETE" ]
            paths:
              - "/job_templates*"
      when:
        - key: request.auth.claims[permissions]
          notValues:
            - "admin:job"
